res/examples/valid/return_stmt_in_nested_block.eg
let a: number = {
    {
        return 123;
    }
};

assert_type a, number;