res/examples/invalid/block_expr_with_expr_after_return_stmt.eg
{
    return 123;
    1 + 5
};

// out: SyntaxError: unreachable code